--- a/Config/SWM.ini
+++ b/Config/SWM.ini
@@ -1,10 +1,11 @@
 [custom]
-;解决DNS泄露，分流群组，交易所直通
+;解决DNS泄露，分流群组
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/MusicLifa/MyRule/main/Ruleset/Exchanges.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/MusicLifa/MyRule/main/Ruleset/MyDirect.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/Aethersailor/Custom_OpenClash_Rules/main/rule/Custom_Direct.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Direct/Direct.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/PrivateTracker/PrivateTracker.list
+ruleset=🪙 欧易币安,https://raw.githubusercontent.com/MusicLifa/MyRule/main/Ruleset/Exchanges.list
 ruleset=🚀 测速工具,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Speedtest/Speedtest.list
 ruleset=💯️ 电影刮削,https://raw.githubusercontent.com/akaet/openclash-rules/main/ruleset/TMDB.list
 ruleset=🦜 Twitter,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Twitter/Twitter.list
@@ -23,7 +24,6 @@ ruleset=🧿 Netflix,https://raw.githubusercontent.com/blackmatrix7/ios_rule_scr
 ruleset=🎠 Disney,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Disney/Disney.list
 ruleset=🎥 HBO,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/HBO/HBO.list
 ruleset=🎺 Spotify,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Spotify/Spotify.list
-ruleset=📺 巴哈姆特,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Bahamut/Bahamut.list
 ruleset=📢 ChatGPT,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/OpenAI/OpenAI.list
 ruleset=🎸 网易音乐,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/NetEaseMusic/NetEaseMusic.list
 ruleset=📺 国内媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/ChinaMedia/ChinaMedia.list
@@ -66,39 +66,39 @@ ruleset=🐠 漏网之鱼,[]FINAL
 
 
 custom_proxy_group=🧙‍ 手动切换`select`.*
-custom_proxy_group=🐠 漏网之鱼`select`[]⛱️ 节点选择`[]DIRECT`[]REJECT
-custom_proxy_group=⛱️ 节点选择`select`[]♻️ 自动选择`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇸🇬 坡县节点`[]🇹🇭 泰国节点`[]🇦🇺 土澳节点`[]🇺🇸 美国节点`[]🧙‍ 手动切换`[]DIRECT
-custom_proxy_group=🎉 YouTube`select`[]⛱️ 节点选择`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇸🇬 坡县节点`[]🇹🇭 泰国节点`[]🇦🇺 土澳节点`[]🇺🇸 美国节点`[]🧙‍ 手动切换
-custom_proxy_group=💯️ 电影刮削`select`[]🇺🇸 美国节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇸🇬 坡县节点`[]🇹🇭 泰国节点`[]🇦🇺 土澳节点`[]🧙‍ 手动切换
-custom_proxy_group=📬 GitHub`select`[]⛱️ 节点选择`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇸🇬 坡县节点`[]🇹🇭 泰国节点`[]🇦🇺 土澳节点`[]🇺🇸 美国节点`[]🧙‍ 手动切换
-custom_proxy_group=🦜 Twitter`select`[]⛱️ 节点选择`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇸🇬 坡县节点`[]🇹🇭 泰国节点`[]🇦🇺 土澳节点`[]🇺🇸 美国节点`[]🧙‍ 手动切换
-custom_proxy_group=🚁‍ Copilot`select`[]🇺🇸 美国节点`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇸🇬 坡县节点`[]🇹🇭 泰国节点`[]🇦🇺 土澳节点`[]🧙‍ 手动切换
-custom_proxy_group=🎥 HBO`select`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇸🇬 坡县节点`[]🇹🇭 泰国节点`[]🇦🇺 土澳节点`[]🧙‍ 手动切换
-custom_proxy_group=🎺 Spotify`select`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇸🇬 坡县节点`[]🇹🇭 泰国节点`[]🇦🇺 土澳节点`[]🧙‍ 手动切换
-custom_proxy_group=🌎 国外媒体`select`[]⛱️ 节点选择`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇸🇬 坡县节点`[]🇹🇭 泰国节点`[]🇦🇺 土澳节点`[]🇺🇸 美国节点`[]🧙‍ 手动切换
-custom_proxy_group=🦚 谷歌服务`select`[]⛱️ 节点选择`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇸🇬 坡县节点`[]🇹🇭 泰国节点`[]🇦🇺 土澳节点`[]🇺🇸 美国节点`[]🧙‍ 手动切换
-custom_proxy_group=🛩️ Telegram`select`[]⛱️ 节点选择`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇸🇬 坡县节点`[]🇹🇭 泰国节点`[]🇦🇺 土澳节点`[]🇺🇸 美国节点`[]🧙‍ 手动切换
-custom_proxy_group=🍏 苹果服务`select`[]🎯 全球直连`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇸🇬 坡县节点`[]🇹🇭 泰国节点`[]🇦🇺 土澳节点`[]🇺🇸 美国节点`[]🧙‍ 手动切换
-custom_proxy_group=Ⓜ️ 必应搜索`select`[]🎯 全球直连`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇸🇬 坡县节点`[]🇹🇭 泰国节点`[]🇦🇺 土澳节点`[]🇺🇸 美国节点`[]🧙‍ 手动切换
-custom_proxy_group=Ⓜ️ 微软云盘`select`[]🎯 全球直连`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇸🇬 坡县节点`[]🇹🇭 泰国节点`[]🇦🇺 土澳节点`[]🇺🇸 美国节点`[]🧙‍ 手动切换
-custom_proxy_group=Ⓜ️ 微软服务`select`[]🎯 全球直连`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇸🇬 坡县节点`[]🇹🇭 泰国节点`[]🇦🇺 土澳节点`[]🇺🇸 美国节点`[]🧙‍ 手动切换
-custom_proxy_group=⛷️ 游戏平台`select`[]🎯 全球直连`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇸🇬 坡县节点`[]🇹🇭 泰国节点`[]🇦🇺 土澳节点`[]🇺🇸 美国节点`[]🧙‍ 手动切换
-custom_proxy_group=🎿 Steam`select`[]🎯 全球直连`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇸🇬 坡县节点`[]🇹🇭 泰国节点`[]🇦🇺 土澳节点`[]🇺🇸 美国节点`[]🧙‍ 手动切换
-custom_proxy_group=🚀 测速工具`select`[]🎯 全球直连`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇸🇬 坡县节点`[]🇹🇭 泰国节点`[]🇦🇺 土澳节点`[]🇺🇸 美国节点`[]🧙‍ 手动切换
-custom_proxy_group=🪇 TikTok`select`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇸🇬 坡县节点`[]🇹🇭 泰国节点`[]🇦🇺 土澳节点`[]🇺🇸 美国节点`[]🧙‍ 手动切换
-custom_proxy_group=🧿 Netflix`select`[]🇸🇬 坡县节点`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇹🇭 泰国节点`[]🇦🇺 土澳节点`[]🇺🇸 美国节点`[]🧙‍ 手动切换
-custom_proxy_group=🎠 Disney`select`[]🇸🇬 坡县节点`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇹🇭 泰国节点`[]🇦🇺 土澳节点`[]🇺🇸 美国节点`[]🧙‍ 手动切换
-custom_proxy_group=📢 ChatGPT`select`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇸🇬 坡县节点`[]🇹🇭 泰国节点`[]🇦🇺 土澳节点`[]🇺🇸 美国节点`[]🧙‍ 手动切换
-custom_proxy_group=📺 巴哈姆特`select`[]⛱️ 节点选择`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇸🇬 坡县节点`[]🇹🇭 泰国节点`[]🇦🇺 土澳节点`[]🇺🇸 美国节点`[]🧙‍ 手动切换
+custom_proxy_group=🐠 漏网之鱼`select`[]⛱️ 节点选择`[]🎯 全球直连`[]REJECT
+custom_proxy_group=⛱️ 节点选择`select`[]♻️ 自动选择`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 倭国节点`[]🇰🇷 棒子节点`[]🇸🇬 坡县节点`[]🇹🇭 泰国节点`[]🇦🇺 土澳节点`[]🇺🇸 美国节点`[]🧙‍ 手动切换`[]DIRECT
+custom_proxy_group=🪙 欧易币安`select`[]🇹🇼 湾湾节点`[]🇯🇵 倭国节点`[]🇸🇬 坡县节点`[]🇰🇷 棒子节点`[]🇹🇭 泰国节点`[]🇺🇸 美国节点`[]🇦🇺 土澳节点`[]🧙‍ 手动切换`[]🎯 全球直连
+custom_proxy_group=🎉 YouTube`select`[]⛱️ 节点选择`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 倭国节点`[]🇰🇷 棒子节点`[]🇸🇬 坡县节点`[]🇹🇭 泰国节点`[]🇦🇺 土澳节点`[]🇺🇸 美国节点`[]🧙‍ 手动切换
+custom_proxy_group=💯️ 电影刮削`select`[]🇺🇸 美国节点`[]🇹🇼 湾湾节点`[]🇯🇵 倭国节点`[]🇰🇷 棒子节点`[]🇸🇬 坡县节点`[]🇹🇭 泰国节点`[]🇦🇺 土澳节点`[]🧙‍ 手动切换
+custom_proxy_group=📬 GitHub`select`[]⛱️ 节点选择`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 倭国节点`[]🇰🇷 棒子节点`[]🇸🇬 坡县节点`[]🇹🇭 泰国节点`[]🇦🇺 土澳节点`[]🇺🇸 美国节点`[]🧙‍ 手动切换
+custom_proxy_group=🦜 Twitter`select`[]⛱️ 节点选择`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 倭国节点`[]🇰🇷 棒子节点`[]🇸🇬 坡县节点`[]🇹🇭 泰国节点`[]🇦🇺 土澳节点`[]🇺🇸 美国节点`[]🧙‍ 手动切换
+custom_proxy_group=🚁‍ Copilot`select`[]🇺🇸 美国节点`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 倭国节点`[]🇰🇷 棒子节点`[]🇸🇬 坡县节点`[]🇹🇭 泰国节点`[]🇦🇺 土澳节点`[]🧙‍ 手动切换
+custom_proxy_group=🎥 HBO`select`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 倭国节点`[]🇰🇷 棒子节点`[]🇸🇬 坡县节点`[]🇹🇭 泰国节点`[]🇦🇺 土澳节点`[]🧙‍ 手动切换
+custom_proxy_group=🎺 Spotify`select`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 倭国节点`[]🇰🇷 棒子节点`[]🇸🇬 坡县节点`[]🇹🇭 泰国节点`[]🇦🇺 土澳节点`[]🧙‍ 手动切换
+custom_proxy_group=🌎 国外媒体`select`[]⛱️ 节点选择`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 倭国节点`[]🇰🇷 棒子节点`[]🇸🇬 坡县节点`[]🇹🇭 泰国节点`[]🇦🇺 土澳节点`[]🇺🇸 美国节点`[]🧙‍ 手动切换
+custom_proxy_group=🦚 谷歌服务`select`[]⛱️ 节点选择`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 倭国节点`[]🇰🇷 棒子节点`[]🇸🇬 坡县节点`[]🇹🇭 泰国节点`[]🇦🇺 土澳节点`[]🇺🇸 美国节点`[]🧙‍ 手动切换
+custom_proxy_group=🛩️ Telegram`select`[]⛱️ 节点选择`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 倭国节点`[]🇰🇷 棒子节点`[]🇸🇬 坡县节点`[]🇹🇭 泰国节点`[]🇦🇺 土澳节点`[]🇺🇸 美国节点`[]🧙‍ 手动切换
+custom_proxy_group=🍏 苹果服务`select`[]🎯 全球直连`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 倭国节点`[]🇰🇷 棒子节点`[]🇸🇬 坡县节点`[]🇹🇭 泰国节点`[]🇦🇺 土澳节点`[]🇺🇸 美国节点`[]🧙‍ 手动切换
+custom_proxy_group=Ⓜ️ 必应搜索`select`[]🎯 全球直连`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 倭国节点`[]🇰🇷 棒子节点`[]🇸🇬 坡县节点`[]🇹🇭 泰国节点`[]🇦🇺 土澳节点`[]🇺🇸 美国节点`[]🧙‍ 手动切换
+custom_proxy_group=Ⓜ️ 微软云盘`select`[]🎯 全球直连`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 倭国节点`[]🇰🇷 棒子节点`[]🇸🇬 坡县节点`[]🇹🇭 泰国节点`[]🇦🇺 土澳节点`[]🇺🇸 美国节点`[]🧙‍ 手动切换
+custom_proxy_group=Ⓜ️ 微软服务`select`[]🎯 全球直连`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 倭国节点`[]🇰🇷 棒子节点`[]🇸🇬 坡县节点`[]🇹🇭 泰国节点`[]🇦🇺 土澳节点`[]🇺🇸 美国节点`[]🧙‍ 手动切换
+custom_proxy_group=⛷️ 游戏平台`select`[]🎯 全球直连`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 倭国节点`[]🇰🇷 棒子节点`[]🇸🇬 坡县节点`[]🇹🇭 泰国节点`[]🇦🇺 土澳节点`[]🇺🇸 美国节点`[]🧙‍ 手动切换
+custom_proxy_group=🎿 Steam`select`[]🎯 全球直连`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 倭国节点`[]🇰🇷 棒子节点`[]🇸🇬 坡县节点`[]🇹🇭 泰国节点`[]🇦🇺 土澳节点`[]🇺🇸 美国节点`[]🧙‍ 手动切换
+custom_proxy_group=🚀 测速工具`select`[]🎯 全球直连`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 倭国节点`[]🇰🇷 棒子节点`[]🇸🇬 坡县节点`[]🇹🇭 泰国节点`[]🇦🇺 土澳节点`[]🇺🇸 美国节点`[]🧙‍ 手动切换
+custom_proxy_group=🪇 TikTok`select`[]🇹🇼 湾湾节点`[]🇯🇵 倭国节点`[]🇰🇷 棒子节点`[]🇸🇬 坡县节点`[]🇹🇭 泰国节点`[]🇦🇺 土澳节点`[]🇺🇸 美国节点`[]🧙‍ 手动切换
+custom_proxy_group=🧿 Netflix`select`[]🇸🇬 坡县节点`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 倭国节点`[]🇰🇷 棒子节点`[]🇹🇭 泰国节点`[]🇦🇺 土澳节点`[]🇺🇸 美国节点`[]🧙‍ 手动切换
+custom_proxy_group=🎠 Disney`select`[]🇸🇬 坡县节点`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 倭国节点`[]🇰🇷 棒子节点`[]🇹🇭 泰国节点`[]🇦🇺 土澳节点`[]🇺🇸 美国节点`[]🧙‍ 手动切换
+custom_proxy_group=📢 ChatGPT`select`[]🇹🇼 湾湾节点`[]🇯🇵 倭国节点`[]🇰🇷 棒子节点`[]🇸🇬 坡县节点`[]🇹🇭 泰国节点`[]🇦🇺 土澳节点`[]🇺🇸 美国节点`[]🧙‍ 手动切换
 custom_proxy_group=🎸 网易音乐`select`[]🎯 全球直连`[]♻️ 自动选择`(网易|音乐|解锁|Music|NetEase)
 custom_proxy_group=📺 国内媒体`select`[]🎯 全球直连`[]⛱️ 节点选择`[]🧙‍ 手动切换
 custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]⛱️ 节点选择`[]🧙‍ 手动切换
 custom_proxy_group=♻️ 自动选择`url-test`.*`http://cp.cloudflare.com/generate_204`300,,50
 custom_proxy_group=🇭🇰 香港节点`url-test`(港|HK|hk|Hong Kong|HongKong|hongkong|深港)`http://cp.cloudflare.com/generate_204`300,,50
-custom_proxy_group=🇯🇵 日本节点`url-test`(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|[^-]日|JP|Japan)`http://cp.cloudflare.com/generate_204`300,,50
+custom_proxy_group=🇯🇵 倭国节点`url-test`(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|[^-]日|JP|Japan)`http://cp.cloudflare.com/generate_204`300,,50
 custom_proxy_group=🇸🇬 坡县节点`url-test`(新加坡|坡|狮城|SG|Singapore)`http://cp.cloudflare.com/generate_204`300,,50
 custom_proxy_group=🇹🇼 湾湾节点`url-test`(台|新北|彰化|TW|Taiwan)`http://cp.cloudflare.com/generate_204`300,,50
-custom_proxy_group=🇰🇷 韩国节点`url-test`(KR|Korea|KOR|首尔|韩|韓)`http://cp.cloudflare.com/generate_204`300,,50
+custom_proxy_group=🇰🇷 棒子节点`url-test`(KR|Korea|KOR|首尔|韩|韓)`http://cp.cloudflare.com/generate_204`300,,50
 ;custom_proxy_group=🇻🇳 越南节点`url-test`(河内|VN|越南|胡志明|Vietnam)`http://cp.cloudflare.com/generate_204`300,,50
 ;custom_proxy_group=🇹🇷 土鸡节点`url-test`(土耳其|Turkey|Türkiye)`http://cp.cloudflare.com/generate_204`300,,50
 custom_proxy_group=🇹🇭 泰国节点`url-test`(TH|泰国|曼谷|Thailand)`http://cp.cloudflare.com/generate_204`300,,50
@@ -107,7 +107,7 @@ custom_proxy_group=🇸🇦 沙特节点`url-test`(沙特阿拉伯|Saudi Arabia)
 custom_proxy_group=🇮🇳 阿三节点`url-test`(印度|India|新德里|孟买)`http://cp.cloudflare.com/generate_204`300,,50
 custom_proxy_group=🇦🇺 土澳节点`url-test`(澳大利亚|Australia|堪培拉|墨尔本|悉尼|珀斯|霍巴特)`http://cp.cloudflare.com/generate_204`300,,50
 custom_proxy_group=🇺🇸 美国节点`url-test`(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)`http://cp.cloudflare.com/generate_204`300,,50
-custom_proxy_group=🇨🇦 加拿大节点`url-test`(加拿大|Canada|渥太华|温哥华|卡尔加里)`http://cp.cloudflare.com/generate_204`300,,50
+custom_proxy_group=🇨🇦 北美鬼佬`url-test`(加拿大|Canada|渥太华|温哥华|卡尔加里)`http://cp.cloudflare.com/generate_204`300,,50
 custom_proxy_group=🇬🇧 英国节点`url-test`(GB|英国|Great Britain)`http://cp.cloudflare.com/generate_204`300,,50
 custom_proxy_group=🇫🇷 法国节点`url-test`(FR|法国|France|巴黎)`http://cp.cloudflare.com/generate_204`300,,50
 custom_proxy_group=🇩🇪 德国节点`url-test`(DE|德国|Germany|柏林|法兰克福)`http://cp.cloudflare.com/generate_204`300,,50
