--- a/Config/MyClashNOAD.ini
+++ b/Config/MyClashNOAD.ini
@@ -69,7 +69,7 @@ ruleset=🐠 漏网之鱼,[]FINAL
 custom_proxy_group=🧙‍ 手动切换`select`.*
 custom_proxy_group=🐠 漏网之鱼`select`[]⛱️ 节点选择`[]🎯 全球直连`[]REJECT
 custom_proxy_group=⛱️ 节点选择`select`[]♻️ 自动选择`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 倭国节点`[]🇰🇷 棒子节点`[]🇸🇬 坡县节点`[]🇹🇭 泰国节点`[]🇦🇺 土澳节点`[]🇺🇸 美国节点`[]🧙‍ 手动切换`[]DIRECT
-custom_proxy_group=👻 Discord`select`[]🇹🇼 湾湾节点`[]🇯🇵 倭国节点`[]🇰🇷 棒子节点`[]🇸🇬 坡县节点`[]🇹🇭 泰国节点`[]🇦🇺 土澳节点`[]🇺🇸 美国节点`[]🇨🇦 北美鬼佬`[]🇬🇧 英国节点`[]🇫🇷 法国节点`[]🇩🇪 德国节点`[]🇳🇱 荷兰节点`[]⛱️ 节点选择`[]🧙‍ 手动切换
+custom_proxy_group=👻 Discord`select`[]🇹🇼 湾湾节点`[]🇯🇵 倭国节点`[]🇰🇷 棒子节点`[]🇸🇬 坡县节点`[]🇹🇭 泰国节点`[]🇦🇺 土澳节点`[]🇺🇸 美国节点`[]🇨🇦 北美鬼佬`[]🇬🇧 英国节点`[]🇫🇷 法国节点`[]🇩🇪 德国节点`[]🇳🇱 荷兰节点`[]🇨🇭 瑞士节点`[]🇸🇪 瑞典节点`[]🇪🇸 斗牛节点`[]🇮🇹 披萨节点`[]🇮🇱 犹太节点`[]🇦🇪 阿联节点`[]🇧🇷 巴西节点`[]🇨🇴 哥伦节点`[]🇨🇱 智利节点`[]⛱️ 节点选择`[]🧙‍ 手动切换
 custom_proxy_group=🎉 YouTube`select`[]⛱️ 节点选择`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 倭国节点`[]🇰🇷 棒子节点`[]🇸🇬 坡县节点`[]🇹🇭 泰国节点`[]🇦🇺 土澳节点`[]🇺🇸 美国节点`[]🧙‍ 手动切换
 custom_proxy_group=💯️ 电影刮削`select`[]🇺🇸 美国节点`[]🇹🇼 湾湾节点`[]🇯🇵 倭国节点`[]🇰🇷 棒子节点`[]🇸🇬 坡县节点`[]🇹🇭 泰国节点`[]🇦🇺 土澳节点`[]🧙‍ 手动切换
 custom_proxy_group=📬 GitHub`select`[]⛱️ 节点选择`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 倭国节点`[]🇰🇷 棒子节点`[]🇸🇬 坡县节点`[]🇹🇭 泰国节点`[]🇦🇺 土澳节点`[]🇺🇸 美国节点`[]🧙‍ 手动切换
@@ -117,6 +117,15 @@ custom_proxy_group=🇬🇧 英国节点`url-test`(GB|英国|Great Britain)`http
 custom_proxy_group=🇫🇷 法国节点`url-test`(FR|法国|France|巴黎)`http://cp.cloudflare.com/generate_204`300,,50
 custom_proxy_group=🇩🇪 德国节点`url-test`(DE|德国|Germany|柏林|法兰克福)`http://cp.cloudflare.com/generate_204`300,,50
 custom_proxy_group=🇳🇱 荷兰节点`url-test`(NL|荷兰|Netherlands|阿姆斯特丹)`http://cp.cloudflare.com/generate_204`300,,50
+custom_proxy_group=🇮🇹 披萨节点`url-test`(🇮🇹|意大利|罗马)`http://cp.cloudflare.com/generate_204`300,,50
+custom_proxy_group=🇪🇸 斗牛节点`url-test`(🇪🇸|西班牙|马德里)`http://cp.cloudflare.com/generate_204`300,,50
+custom_proxy_group=🇸🇪 瑞典节点`url-test`(🇸🇪|瑞典|斯德哥尔摩)`http://cp.cloudflare.com/generate_204`300,,50
+custom_proxy_group=🇨🇭 瑞士节点`url-test`(🇨🇭|瑞士)`http://cp.cloudflare.com/generate_204`300,,50
+custom_proxy_group=🇮🇱 犹太节点`url-test`(🇮🇱|以色列|特拉维夫)`http://cp.cloudflare.com/generate_204`300,,50
+custom_proxy_group=🇦🇪 阿联节点`url-test`(🇦🇪|阿联酋)`http://cp.cloudflare.com/generate_204`300,,50
+custom_proxy_group=🇧🇷 巴西节点`url-test`(🇧🇷|巴西|巴西利亚|里约)`http://cp.cloudflare.com/generate_204`300,,50
+custom_proxy_group=🇨🇴 哥伦节点`url-test`(🇨🇴|哥伦比亚)`http://cp.cloudflare.com/generate_204`300,,50
+custom_proxy_group=🇨🇱 智利节点`url-test`(🇨🇱|智利)`http://cp.cloudflare.com/generate_204`300,,50
 
 enable_rule_generator=true
 overwrite_original_rules=true
