--- a/Config/MyClashNOAD.ini
+++ b/Config/MyClashNOAD.ini
@@ -1,6 +1,6 @@
 [custom]
 ;解决DNS泄露，分流群组
-ruleset=⛔ 屏蔽网址,https://raw.githubusercontent.com/MusicLifa/MyRule/main/Ruleset/MyReject.list
+ruleset=⛔ 网址屏蔽,https://raw.githubusercontent.com/MusicLifa/MyRule/main/Ruleset/MyReject.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/MusicLifa/MyRule/main/Ruleset/MyDirect.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/Aethersailor/Custom_OpenClash_Rules/main/rule/Custom_Direct.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Direct/Direct.list
@@ -67,7 +67,7 @@ ruleset=🎯 全球直连,[]GEOIP,CN,no-resolve
 ruleset=🐠 漏网之鱼,[]FINAL
 
 custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]⛱️ 节点选择`[]🧙‍ 手动切换
-custom_proxy_group=⛔ 屏蔽网址`select`[]REJECT`[]DIRECT
+custom_proxy_group=⛔ 网址屏蔽`select`[]REJECT`[]DIRECT
 custom_proxy_group=🐠 漏网之鱼`select`[]⛱️ 节点选择`[]🎯 全球直连`[]REJECT
 custom_proxy_group=⛱️ 节点选择`select`[]♻️ 自动选择`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 倭国节点`[]🇰🇷 棒子节点`[]🇸🇬 坡县节点`[]🇹🇭 泰国节点`[]🇦🇺 土澳节点`[]🇺🇸 美国节点`[]🧙‍ 手动切换`[]DIRECT
 custom_proxy_group=♻️ 自动选择`url-test`.*`http://cp.cloudflare.com/generate_204`300,,50
